# interview_generate

./: Cargo.toml
src/: controllers.rs  libs.rs  main.rs  models.rs
src/data/: interview.json
