[package]
name = "interview_generate"
version = "0.1.0"
authors = ["mkubasz <mkubasz@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
uuid = "0.7"
strum = "0.15.0"
strum_macros = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]